<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/simple_background_nexus_5_wallpapers_hd_107"
    android:orientation="vertical"
    android:shape="rectangle">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="5dp"
        android:layout_weight="2"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="25dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_weight="0.48"
            android:background="@android:color/transparent"
            android:textColor="@android:color/background_light"
            android:text="@string/about"
            tools:ignore="NestedWeights" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.48"
            android:contentDescription="@string/company_logo"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:alpha="0.9"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="25dp">

        <TextView
            android:id="@+id/textView_moto"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_weight="1"

            android:gravity="center"
            android:text="@string/compay_moto"
            android:background="@android:color/transparent"
            android:textColor="@android:color/background_light"
            tools:ignore="NestedWeights" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <Button
                android:id="@+id/button_sign_up"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:text="@string/sign_up"
                android:textColor="@android:color/background_light"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/button_sign_in"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:text="@string/sign_in"
                android:textColor="@android:color/background_light" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/textView_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/view_our_terms_and_privacy_policy"
            android:textColor="@android:color/background_light"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/textView_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:text="@string/ama_llc_2017"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

</LinearLayout>