<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/simple_background_nexus_5_wallpapers_hd_107">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:srcCompat="@drawable/rsz_1logo"
            android:layout_weight="0.23"
            android:contentDescription="@string/company_symbol"
            tools:ignore="NestedWeights" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="25dp"
        android:paddingStart="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                app:srcCompat="@drawable/ic_action_name" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/editText_userid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/background_light"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.49"
                    android:cursorVisible="true"
                    android:ems="10"
                    android:gravity="top|center"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/background_light"
                    android:textColorHighlight="@android:color/white"
                    android:textColorHint="@android:color/background_light"
                    android:textColorLink="@android:color/white"
                    android:textCursorDrawable="@android:color/background_light"
                    android:textSelectHandle="@android:color/background_light" />

            </android.support.design.widget.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                app:srcCompat="@drawable/ic_action_name_lock" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/background_light"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/background_light"
                    android:textColorHighlight="@android:color/background_light"
                    android:textColorHint="@android:color/background_light"
                    android:textColorLink="@android:color/white"
                    android:textCursorDrawable="@android:color/background_light"
                    android:textSelectHandle="@android:color/background_light" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_login"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_style"
            android:text="@string/button_sign_in"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="top|center">

        <TextView
            android:id="@+id/textView_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:text="Password"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/textView_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="  |  "
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/textView_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start"
            android:text="Register"
            android:textColor="@android:color/background_light" />
    </LinearLayout>
</LinearLayout>